--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -8,6 +8,22 @@
     width: 100%;
     cursor: pointer;
     transition: all .3s ease;
+    position: relative;
+    overflow: hidden;
+
+    .button__mask {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 10;
+        
+        // background-color: rgba(0, 0, 0, .2);
+    }
     
 
     .button__text {
