--- a/src/components/profileCard/ProfileCard.scss
+++ b/src/components/profileCard/ProfileCard.scss
@@ -26,22 +26,31 @@
             flex: 0 0 auto;
             width: 150px;
             height: 150px;
+            border-radius: 100%;
+            overflow: hidden;
+            background-color: #eee;
+            // border: 1px solid #000;
+            box-shadow: 0px 0px 30px 1px rgba(0, 0, 0, 0.3);
 
             img {
                 width: 100%;
                 height: 100%;   
                 object-fit: cover;
+                display: flex;
             }
         }
     }
 
     &__body {
-
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
         &_item {
-
+            display: inline-block;
         }
 
-        &_item--nickname {
+        &_item--username {
             font-weight: 700;
             font-size: 30px;
             line-height: 30px;
@@ -65,6 +74,7 @@
             color: #AFAFAF;
             padding: 5px 8px;
             margin-bottom: 5px;
+            
         }
 
         // &_item--status.active {
