--- a/src/components/profileNav/ProfileNav.scss
+++ b/src/components/profileNav/ProfileNav.scss
@@ -4,6 +4,7 @@
 
     &__list {
         display: flex;
+        justify-content: flex-end;
     }
 
     &__item {
@@ -30,7 +31,7 @@
         &_img {
             width: 100%;
             height: 100%;
-            // overflow: hidden;
+            overflow: hidden;
             img {
                 width: 100%;
                 height: 100%;
