--- a/src/components/changeAvatar/ChangeAvatar.scss
+++ b/src/components/changeAvatar/ChangeAvatar.scss
@@ -23,6 +23,7 @@
             cursor: pointer;
             position: relative;
             display: block;
+            -webkit-overflow-scrolling: touch;
             // border: 3px solid var(--orange);
             box-shadow: 0px 0px 30px 1px rgba(0, 0, 0, 0.3);
 
@@ -40,12 +41,12 @@
                 align-items: center;
                 flex-direction: column;
                 justify-content: center;
-                height: 50%;
+                height: 100%;
                 position: absolute;
                 bottom: 0;
                 left: 0;
                 width: 100%;
-                transform: translateY(100%);
+                opacity: 0;
 
                 &_text {
                     text-align: center;
@@ -62,7 +63,7 @@
             }
             &:hover {
                 .changeAvatar__main_img_mask {
-                    transform: translateY(0);
+                    opacity: 1;
                 }
             }
         }
