--- a/src/components/profileCard/ProfileCard.scss
+++ b/src/components/profileCard/ProfileCard.scss
@@ -24,19 +24,23 @@
         align-items: flex-start;
         &_el {
             flex: 0 0 auto;
-            width: 150px;
-            height: 150px;
+            width: 160px;
+            height: 160px;
             border-radius: 100%;
             overflow: hidden;
-            background-color: #eee;
             // border: 1px solid #000;
-            box-shadow: 0px 0px 30px 1px rgba(0, 0, 0, 0.3);
+            box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
+            position: relative;
+            background-color: #fff;
+            // border: 3px solid rgba(#FF8B00, .4);
 
             img {
                 width: 100%;
-                height: 100%;   
+                height: 100%;  
                 object-fit: cover;
                 display: flex;
+                border-radius: 100%;
+                border: 2px solid transparent;
             }
         }
     }
@@ -75,6 +79,15 @@
             padding: 5px 8px;
             margin-bottom: 5px;
             
+        }
+
+        &_item--link {
+            word-break: break-all;
+        }
+
+        &_item--descr {
+            word-break: break-all;
+            white-space: pre-wrap;
         }
 
         // &_item--status.active {
