--- a/src/components/changeAvatar/AvatarCrop.scss
+++ b/src/components/changeAvatar/AvatarCrop.scss
@@ -2,6 +2,103 @@
     // overflow: hidden;
     border-radius: 6px;
     padding-bottom: 0;
+
+
+    
+    // &__save {
+    //     position: absolute;
+    //     bottom: 0;
+    //     right: 0;
+    //     border: none;
+    //     background-color: #FF8B00;
+    //     color: #fff;
+    //     z-index: 100;
+    //     display: flex;
+    //     align-items: center;
+    //     justify-content: center;
+    //     padding: 15px 40px;
+    //     border-radius: 6px;
+    //     cursor: pointer;
+    // }
+
+    &__save {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        z-index: 100;
+        width: auto;
+        padding-left: 35px;
+        padding-right: 35px;
+    }
+
+
+
+    &__action {
+        width: 100%;
+        height: 100%;   
+        display: flex;
+        align-items: center;
+        padding: 20px 50px;
+        justify-content: space-between;
+
+
+        &_btn.disabled {
+            opacity: .5;
+            pointer-events: none;
+            filter: grayscale(1);
+        }
+        &_btn {
+            width: 48%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 30px 10px;
+            border-radius: 10px;
+            background-color: rgba(#FF8B00, .3);
+            cursor: pointer;
+            transition: all .3s ease;
+
+            &:hover {
+                background-color: rgba(#FF8B00, 1);
+
+                .AvatarCrop__action_btn_label {
+
+                    color: #fff;
+                }
+            }
+
+            input {
+                position: absolute;
+                top: 0;
+                left: 0;
+                visibility: hidden;
+                pointer-events: none;
+                z-index: -1;
+            }
+
+            &_label {
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+                cursor: pointer;
+                &_icon {
+                    font-size: 30px;
+                    transition: all .3s ease;
+
+                }
+
+                &_text {
+                    font-size: 16px;
+                    line-height: 25px;
+                    text-align: center;
+                    transition: all .3s ease;
+
+                }
+            }
+        }
+    }
+
+
     .crop-container {
         
         .reactEasyCrop_Container {
