--- a/src/components/changeAvatar/ChangeAvatar.scss
+++ b/src/components/changeAvatar/ChangeAvatar.scss
@@ -19,19 +19,21 @@
             height: 300px;
             border-radius: 100%;
             overflow: hidden;
-            background-color: #ccc;
+            background-color: #fff;
             cursor: pointer;
             position: relative;
             display: block;
             -webkit-overflow-scrolling: touch;
             // border: 3px solid var(--orange);
             box-shadow: 0px 0px 30px 1px rgba(0, 0, 0, 0.3);
+            padding: 5px;
 
 
             img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                border-radius: 100%;
             }
             &_mask {
                 transition: all .3s ease-in-out;
