--- a/src/components/editProfile/EditProfile.scss
+++ b/src/components/editProfile/EditProfile.scss
@@ -76,17 +76,17 @@
             }
 
             input:checked ~ .editProfile__form_item_radio_label{
-                opacity: 1;
+                background-color: var(--orange);
                 
                 .editProfile__form_item_radio_label_text {
                     color: #fff;
-                    opacity: 1;
                 }
             }
 
             &_label {
                 border-radius: 6px;
-                background-color: #FF9E10;
+                background-color: transparent;
+                border: 1px solid var(--orange);
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -94,14 +94,13 @@
                 transition: all .2s ease-in-out;
                 padding: 12px 0;
                 color: #fff;
-                opacity: .3;
                 &_text {
                     // width: 100%;
+                    color: var(--orange);
                     white-space: nowrap;
                     font-weight: 500;
                     font-size: 16px;
                     line-height: 20px;
-                    
                     transition: all .3s ease-in-out;
                 }
             }
