--- a/src/components/profileCard/ProfileCard.scss
+++ b/src/components/profileCard/ProfileCard.scss
@@ -22,6 +22,31 @@
     &__img {
         display: flex; 
         align-items: flex-start;
+
+        &_menu {
+            border-radius: 6px;
+            background-color: #fff;
+            box-shadow: 0px 0px 10px #aaa;
+            &_item {
+                padding: 5px;
+                transition: all .3s ease;
+                cursor: pointer;
+
+                &:hover {
+                    background-color: #EFEFEF;
+                }
+
+            }
+
+            &_item.delete {
+                color: red;
+            }
+
+            &_item.disabled {
+                opacity: .5;
+                pointer-events: none;
+            }
+        }
         &_el {
             flex: 0 0 auto;
             width: 160px;
@@ -33,6 +58,7 @@
             position: relative;
             background-color: #fff;
             // border: 3px solid rgba(#FF8B00, .4);
+            cursor: pointer;
 
             img {
                 width: 100%;
@@ -124,7 +150,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-top: 30px;
+        padding: 30px 0;
 
         &_item {
             margin: 0 60px;
