--- a/src/components/profileNav/ProfileNav.scss
+++ b/src/components/profileNav/ProfileNav.scss
@@ -37,6 +37,8 @@
                 height: 100%;
                 object-fit: cover;
                 display: flex;
+                border-radius: 100%;
+                
             }
         }
     }
