--- a/src/components/changeAvatar/AvatarCrop.scss
+++ b/src/components/changeAvatar/AvatarCrop.scss
@@ -52,7 +52,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 30px 10px;
+            
             border-radius: 10px;
             background-color: rgba(#FF8B00, .3);
             cursor: pointer;
@@ -77,9 +77,12 @@
             }
 
             &_label {
+                padding: 30px 10px;
                 display: flex;
                 align-items: center;
                 flex-direction: column;
+                width: 100%;
+                height: 100%;
                 cursor: pointer;
                 &_icon {
                     font-size: 30px;
