--- a/src/components/profileCard/ProfileCard.scss
+++ b/src/components/profileCard/ProfileCard.scss
@@ -17,6 +17,14 @@
 
     &__item {
         margin: 0 50px;
+
+        &:last-child {
+            margin-right: 0;
+        }
+
+        &:first-child {
+            margin-left: 0;
+        }
     }
 
     &__img {
@@ -72,10 +80,12 @@
     }
 
     &__body {
-        width: 30%;
+        width: 40%;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        margin-right: 0;
+        margin-left: 0;
         &_item {
             display: inline-block;
         }
