--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -72,3 +72,17 @@ body {
     background-color: #fff;
     
 }
+
+.custom-scroll {
+
+    &::-webkit-scrollbar {
+        width: 4px;
+        height: 100%;
+        background-color: var(--mainGray);
+        border-radius: 10px;
+    }
+    &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: #000;
+    }   
+}
