--- a/src/components/list/postList/postList.scss
+++ b/src/components/list/postList/postList.scss
@@ -15,6 +15,7 @@
         overflow: hidden;
         cursor: pointer;
         transition: all .3s ease;
+        border-radius: 10px;
 
         &:hover {
 
