--- a/src/components/pages/post/Post.scss
+++ b/src/components/pages/post/Post.scss
@@ -168,11 +168,11 @@
                 
                 &_avatar {
                     margin-right: 10px;
-
+                    flex: 0 0 auto;
                     img {
                         width: 100%;
                         height: 100%;
-                        object-fit: contain;
+                        object-fit: cover;
                         display: flex;
                         border-radius: 100%;
                     }
@@ -209,6 +209,11 @@
 
                 &_item {
                     display: flex;
+                    margin-bottom: 20px;
+
+                    &:last-child {
+                        margin-bottom: 0;
+                    }
 
                     &_avatar {
                         margin-right: 10px;
