--- a/src/components/pages/post/Post.scss
+++ b/src/components/pages/post/Post.scss
@@ -128,6 +128,8 @@
             }
 
             &_opt {
+                display: flex;
+                align-items: center;
 
                 &_btn {
                     width: 50px;
@@ -140,6 +142,35 @@
                     transform: rotate(90deg);
                     font-size: 40px;
                     cursor: pointer;
+                    margin: 0 10px;
+                    transition: all .3s ease;
+
+                    &:first-child {
+                        margin-left: 0;
+                    }
+
+                    &:last-child {
+                        margin-right: 0;
+                    }
+
+                    &:hover {
+                        border-color:  #3e4444;
+                        color: #fff;
+                        background-color: #3e4444;
+                    }
+                }
+
+                &_btn-close {
+                    transform: rotate(0);
+                    font-size: 20px;
+                    // border-color: red;
+                    color: red;
+
+                    &:hover {
+                        border-color: red;
+                        background-color: red;
+                        color: #fff;
+                    }
                 }
             }
         }
@@ -169,6 +200,7 @@
                 &_avatar {
                     margin-right: 10px;
                     flex: 0 0 auto;
+
                     img {
                         width: 100%;
                         height: 100%;
