--- a/src/components/pages/post/Post.scss
+++ b/src/components/pages/post/Post.scss
@@ -5,7 +5,7 @@
         background-color: #fff;
         border-radius: 20px;
         display: flex;
-        height: 850px;
+        height: calc(100vh - 120px);
         overflow: hidden;
     }
 
