--- a/src/components/pages/post/Post.scss
+++ b/src/components/pages/post/Post.scss
@@ -120,6 +120,13 @@
                         font-size: 20px;
                         color: #000;
                     }
+
+                    &_confirmed {
+                        color: var(--orange);
+                        font-size: 20px;
+                        line-height: 20px;
+                        margin: 0 15px;
+                    }
                 }
 
                 &_status {
@@ -220,6 +227,14 @@
                             margin-right: 10px;
     
                         }
+
+                        &_confirmed {
+                            font-size: 20px;
+                            line-height: 20px;
+                            color: var(--orange);
+                            margin: 0 15px;
+                            margin-left: 0;
+                        }
     
                         &_text {
                             
@@ -268,6 +283,13 @@
 
                         &_text {
 
+                        }
+
+                        &_confirmed {
+                            font-size: 20px;
+                            line-height: 20px;
+                            margin-right: 15px;
+                            color: var(--orange);
                         }
 
                         &_ex {
